objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Location_Group__c</fullName>
        <description>Used to help group for reporting only. Do not place on layout.</description>
        <formula>case(1, 
if( contains(Location, &quot;person&quot;) || contains(Location, &quot;office&quot;),1,0),&quot;In Person&quot;,
if( contains(Location, &quot;Roaming&quot;) ,1,0),&quot;Roaming&quot;,
if( contains(Location, &quot;Walk&quot;) ,1,0),&quot;Walk-in&quot;,
if( contains(Location, &quot;phone&quot;) ,1,0),&quot;Phone&quot;,
&quot;Unknown&quot;)</formula>
        <label>Location Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__AdvisingApptTopic__c</fullName>
        <description>If this activity is an advising appointment, then this represents the topic of the advising appointment, i.e. grade concern, application deadline, etc.</description>
        <inlineHelpText>If this activity is an advising appointment, then this represents the topic of the advising appointment, i.e. grade concern, application deadline, etc.</inlineHelpText>
        <label>Advising Appointment Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__AdvisingApptType__c</fullName>
        <description>If this activity is an advising appointment, then this represents the type of advising appointment, i.e. financial, academic, health, etc.</description>
        <inlineHelpText>If this activity is an advising appointment, then this represents the type of advising appointment, i.e. financial, academic, health, etc.</inlineHelpText>
        <label>Advising Appointment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__IsAdvisingEvent__c</fullName>
        <formula>IF(
    ISBLANK($Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c),
    false,
    IF(
        CONTAINS(
            $Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c,
            &quot;.&quot;
        ),
        $Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c == RecordType.NamespacePrefix &amp; &quot;.&quot; &amp; RecordType.DeveloperName,
        ISBLANK(RecordType.NamespacePrefix) &amp;&amp; $Setup.sfal__SAL_Settings__c.sfal__Advising_Event_RecordType__c == RecordType.DeveloperName
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Advising Event</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>